ADD Image in DB

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["Desdevises", "PROPOS", "Swipeable"]
+  "cSpell.words": ["Desdevises", "PROPOS", "Swipeable"],
+  "python.formatting.provider": "black"
 }
