Return Pages information

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["Desdevises", "PROPOS", "Swipeable"],
+  "cSpell.words": ["Desdevises", "portfolioangeline", "PROPOS", "Swipeable"],
   "python.formatting.provider": "black"
 }
