--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.0",
     "react-use": "^17.4.0",
+    "styled-component": "^2.8.0",
     "styled-components": "^5.0.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "gh-pages": "^4.0.0"
   }
 }
