--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 # REACT_APP_API_URL=http://127.0.0.1:5000
-REACT_APP_API_URL=http://zmdenlz.cluster030.hosting.ovh.net
+REACT_APP_API_URL=https://angelinedesdevises.fr
+# REACT_APP_API_URL=http://zmdenlz.cluster030.hosting.ovh.net
