--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.7"
   },
