--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 blinker==1.7.0
-click==8.1.7
+click==8.1.3
 Flask==3.0.1
-Flask-Cors==4.0.0
+Flask-Cors==3.0.10
+importlib-metadata==5.1.0
 itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.4
-mysql-connector==2.2.9
-pillow==10.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+mysql-connector-python==8.3.0
+Pillow==10.0.0
 python-dotenv==1.0.0
+six==1.16.0
 Werkzeug==3.0.1
+zipp==3.11.0
